[package]
name = "alua"
version = "0.1.3"
edition = "2021"
description = "A Rust library for generating lua lsp annotations from Rust types"
repository = "https://github.com/eievui5/alua"
license = "MIT"

[[example]]
name = "usage"

[features]
userdata = ["alua-macros/userdata"]

[dependencies]
alua-macros = { version = "0.1.1", path = "alua-macros" }

[dev-dependencies]
mlua = { version = "0.9.7", features = ["luajit", "macros"] }
