[package]
name = "alua"
version = "0.2.0"
edition = "2021"
description = "A Rust library for generating lua lsp annotations from Rust types"
repository = "https://github.com/eievui5/alua"
license = "MIT"

[[example]]
name = "usage"

[features]
userdata = ["alua-macros/userdata"]
arrayvec = ["dep:arrayvec"]

[dependencies]
# This version is pinned so that I can't forget to update it
alua-macros = { version = "=0.2.0", path = "alua-macros" }
arrayvec = { version = "0.7.6", optional = true }

[dev-dependencies]
mlua = { version = "0.10.0", features = ["luajit", "macros"] }
