[package]
name = "alua-macros"
version = "0.1.3"
edition = "2021"
description = "Proc macros for alua"
repository = "https://github.com/eievui5/alua"
license = "MIT"

[features]
userdata = []

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.29"
syn = "2.0.23"

[lib]
proc-macro = true
